// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders anchor name in italics if account a known anchor 1`] = `
Array [
  <span
    title="GATEMHCCKCY67ZUCKTROYN24ZYT5GK4EQZ65JJLDHKHRUZI3EUEKMTCH"
  >
    <Link
      replace={false}
      to="/account/GATEMHCCKCY67ZUCKTROYN24ZYT5GK4EQZ65JJLDHKHRUZI3EUEKMTCH"
    >
      <span
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        NaoBTC
      </span>
    </Link>
  </span>,
]
`;

exports[`renders short account for label when no label property 1`] = `
Array [
  <span
    title="GCGG3CIRBG2TTBR4HYZJ7JLDRFKZIYOAHFXRWLU62CA2QN52P2SUQNPJ"
  >
    <Link
      replace={false}
      to="/account/GCGG3CIRBG2TTBR4HYZJ7JLDRFKZIYOAHFXRWLU62CA2QN52P2SUQNPJ"
    >
      GCGG
    </Link>
  </span>,
]
`;

exports[`renders with label 1`] = `
Array [
  <span
    title="GCGG3CIRBG2TTBR4HYZJ7JLDRFKZIYOAHFXRWLU62CA2QN52P2SUQNPJ"
  >
    <Link
      replace={false}
      to="/account/GCGG3CIRBG2TTBR4HYZJ7JLDRFKZIYOAHFXRWLU62CA2QN52P2SUQNPJ"
    >
      Anchor
    </Link>
  </span>,
]
`;
